ETLs and Partial Edit View

--- a/templates/layout/foot.html
+++ b/templates/layout/foot.html
@@ -35,6 +35,7 @@
 <!-- Custom javascript -->
 <script src="{% static 'js/grm.js' %}"></script>
 <script src="{% static 'js/disableOnSubmit.js' %}"></script>
+<script src="https://unpkg.com/htmx.org@1.9.2"></script>
 <script>
     document.addEventListener("DOMContentLoaded", function(){
         document.querySelectorAll('.sidebar .nav-link').forEach(function(element){
