--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -72,7 +72,7 @@
 <!-- ./wrapper -->
 
 {% block javascript %}
-    {% include 'layout/foot.html' %}
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
     {% block select2 %}
         <script type="text/javascript">
             $(document).ready(function () {
