--- a/templates/subprojects/list.html
+++ b/templates/subprojects/list.html
@@ -24,7 +24,7 @@
                     <table id="table-subprojects" class="table">
                         <thead>
                         <tr>
-
+                            <th>{% translate 'Actions' %}</th>
                             <th>{% translate 'Name' %}</th>
                             <th>{% translate 'Description' %}</th>
                             <th>{% translate 'Status' %}</th>
@@ -42,6 +42,17 @@
                         <tbody>
                         {% for subproject in object_list %}
                             <tr>
+                                <td>
+                                    <button class="btn btn-sm btn-secondary"
+                                            hx-get="{% url 'subprojects:subproject_update' subproject.pk %}"
+                                            hx-target="#subprojectModalBody"
+                                            hx-trigger="click"
+                                            hx-swap="innerHTML"
+                                            data-toggle="modal"
+                                            data-target="#subprojectModal">
+                                        {% translate 'Edit' %}
+                                    </button>
+                                </td>
                                 <td align="left">{{ subproject.name }}</td>
                                 <td>{{ subproject.description }}</td>
                                 <td>{{ subproject.status }}</td>
@@ -96,6 +107,24 @@
             });
         });
     </script>
+{% endblock %}
+{% block modals %}
+    <!-- Modal -->
+<div class="modal fade" id="subprojectModal" tabindex="-1" role="dialog" aria-labelledby="subprojectModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">{% translate 'Edit Subproject' %}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="{% translate 'Close' %}">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="subprojectModalBody">
+                <!-- form loaded here by HTMX -->
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
 
