--- a/templates/subprojects/partial_update_form.html
+++ b/templates/subprojects/partial_update_form.html
@@ -1,8 +1,7 @@
-{% load static i18n custom_tags %}
-<form method="post" hx-post="{% url 'subprojects:subproject_update' object.pk %}"
-      hx-target="#subprojectModalBody" hx-swap="outerHTML">
+{% load static i18n custom_tags bootstrap4 %}
+<form method="post" hx-post="{% url 'subprojects:subproject_update' object.pk %}">
     {% csrf_token %}
-    {{ form.as_p }}
+    {% bootstrap_form form %}
     <div class="text-right mt-3">
         <button type="submit" class="btn btn-primary">{% translate 'Save' %}</button>
     </div>
