--- a/templates/subprojects/partial_update_success.html
+++ b/templates/subprojects/partial_update_success.html
@@ -1,4 +1,17 @@
+{% load static i18n %}
 <tr id="subproject-{{ subproject.pk }}" hx-swap-oob="true">
+    <td>
+        <button class="btn btn-sm btn-outline-primary"
+                title="{% translate 'Edit' %}"
+                hx-get="{% url 'subprojects:subproject_update' subproject.pk %}"
+                hx-target="#subprojectModalBody"
+                hx-trigger="click"
+                hx-swap="innerHTML"
+                data-toggle="modal"
+                data-target="#subprojectModal">
+            <i class="fas fa-pencil-alt"></i>
+        </button>
+    </td>
     <td align="left">{{ subproject.name }}</td>
     <td>{{ subproject.description }}</td>
     <td>{{ subproject.status }}</td>
@@ -22,4 +35,6 @@
 </tr>
 <script>
     $('#subprojectModal').modal('hide');
+    $('#updateToastBody').text('{{ subproject.name }} {{ _("updated successfully") }}');
+    $('#updateSuccessToast').toast('show');
 </script>
