reverting design to plain adminlte

--- a/templates/layout/head.html
+++ b/templates/layout/head.html
@@ -38,7 +38,8 @@
 <!-- overlayScrollbars -->
 <link rel="stylesheet" href="{% static 'AdminLTE/plugins/overlayScrollbars/css/OverlayScrollbars.min.css' %}"/>
 <!-- Theme style -->
-<link rel="stylesheet" href="{% static 'css/custom.css' %}"/>
+{#<link rel="stylesheet" href="{% static 'css/custom.css' %}"/>#}
+<link rel="stylesheet" href="{% static 'AdminLTE/dist/css/adminlte.css' %}"/>
 <link href="{% static 'css/iconography.css' %}" rel="stylesheet">
 <link href="{% static 'css/fonts.css' %}" rel="stylesheet">
 <link href="{% static 'AdminLTE/plugins/chart.js/Chart.css' %}" rel="stylesheet">
