--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -2749,10 +2749,10 @@ textarea.form-control {
     user-select: none;
     background-color: transparent;
     border: 1px solid transparent;
-    padding: 6px 16px 6px 16px !important;
+    /*padding: 6px 16px 6px 16px !important;*/
     font-size: 1rem;
     line-height: 1.5;
-    border-radius: 15px !important;
+    /*border-radius: 15px !important;*/
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
