--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -20,7 +20,7 @@
     <!-- icheck bootstrap -->
     <link rel="stylesheet" href="{% static 'AdminLTE/plugins/icheck-bootstrap/icheck-bootstrap.min.css' %}"/>
     <!-- Theme style -->
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}"/>
+    <link rel="stylesheet" href="{% static 'AdminLTE/dist/css/adminlte.css' %}"/>
     <link href="{% static 'css/fonts.css' %}" rel="stylesheet">
 </head>
 <style>
