--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -75,13 +75,13 @@
     {% include 'layout/foot.html' %}
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
     {% block select2 %}
-{#        <script type="text/javascript">#}
-{#            $(document).ready(function () {#}
-{#                var language = '{{ LANGUAGE_CODE }}'#}
-{#                $("select").select2({ language });#}
-{#            });#}
-{#        </script>#}
-{#        <script src="{% static 'js/vendor/select2/i18n/fr.js' %}"></script>#}
+        <script type="text/javascript">
+            $(document).ready(function () {
+                var language = '{{ LANGUAGE_CODE }}'
+                $("select").select2({ language });
+            });
+        </script>
+        <script src="{% static 'js/vendor/select2/i18n/fr.js' %}"></script>
     {% endblock select2 %}
 {% endblock javascript %}
 {% block extrajs %}
