--- a/templates/administrative_levels/administrative_unit_children.html
+++ b/templates/administrative_levels/administrative_unit_children.html
@@ -1,27 +1,79 @@
 {% extends 'layout/base.html' %}
+{% load static i18n bootstrap4 %}
 
 {% block content %}
   <h1>{{ title }}</h1>
+        <label for="root-select">{{ selects.0.name }}</label>
+        <select id="root-select" class="form-control" style="width: 100%;" data-order="{{ view.request.user.administrative_unit.level.order }}" disabled>
+            <option value="{{ view.request.user.administrative_unit.id }}">{{ view.request.user.administrative_unit.name }}</option>
+        </select>
+    
+    {% for select in selects|slice:"1:" %}
+        <label for="{{ select.name }}-select">{{ select.name }}</label>
+        <select id="{{ select.name }}-select" class="form-control {% if forloop.last %}au-select-last{% else %}au-select{% endif %} au-select-order-{{ select.order }}" style="width: 100%;" data-order="{{ select.order }}" {% if not forloop.first %}disabled{% endif %}>
+        {% if forloop.first %}
+                <option value="" selected>--------</option>
+            {% for au_val in initial_select_values %}
+                <option value="{{ au_val.id }}">{{ au_val.name }}</option>
+            {% endfor %}
+        {% else %}
+                <option value="" selected>--------</option>
+        {% endif %}
+        </select>
+    {% empty %}
+        <p>No subprojects found.</p>
+    {% endfor %}
 
-  {% if subprojects %}
-    <label for="child-select">Select a child administrative unit:</label>
-    <select id="child-select" class="form-control" style="width: 100%;">
-      {% for subproject in subprojects %}
-        <option value="{{ subproject.id }}">{{ subproject.name }}</option>
-      {% endfor %}
+    <label for="child-select">Subprojects</label>
+    <select id="child-select" class="form-control subproject-select" style="width: 100%;" disabled>
+        <option value="" selected>--------</option>
     </select>
-  {% else %}
-    <p>No subprojects found.</p>
-  {% endif %}
 {% endblock %}
 
-{% block extra_js %}
+{% block extrajs %}
   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      $('#child-select').select2({
-        placeholder: "Select a unit",
-        allowClear: true
-      });
+  
+  function init_select(){}
+    
+    $(document).ready(function (){
+        
+        $('.au-select').on('change', function(){
+            let url = "{% url 'administrativelevels:api:administrative-level-children' '1' %}"
+            url = url.replace('1', this.value)
+            let next_order = parseInt($(this).data('order')) + 1
+            let next_select = $('.au-select-order-' + next_order);
+            next_select.attr('disabled', true);
+            $.ajax({
+                url: url,
+                success: function(data){
+                    next_select.empty()
+                    next_select.append($("<option />").val("").text("--------"));
+                    $.each(data, function() {
+                        next_select.append($("<option />").val(this.id).text(this.name));
+                    });
+                    next_select.attr('disabled', false);
+                }
+            })
+        });
+        
+        $('.au-select-last').on('change', function(){
+            let url = "{% url 'subprojects:api:administrative-unit-select' '1' %}"
+            let element = $('.subproject-select');
+            url = url.replace('1', this.value)
+            element.attr('disabled', true);
+            $.ajax({
+                url: url,
+                success: function(data){
+                    element.empty()
+                    element.append($("<option />").val("").text("--------"));
+                    $.each(data, function() {
+                        element.append($("<option />").val(this.id).text(this.name));
+                    });
+                    element.attr('disabled', false);
+                }
+            })
+        });
     });
+    
   </script>
 {% endblock %}
