Replaces select2 initialization location
Moves the select2 initialization script from the base template to the administrative unit children template.

This allows select2 to be initialized only where it is needed, and prevents potential conflicts with other JavaScript libraries.

--- a/templates/administrative_levels/administrative_unit_children.html
+++ b/templates/administrative_levels/administrative_unit_children.html
@@ -33,6 +33,13 @@
 {% endblock %}
 
 {% block extrajs %}
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var language = '{{ LANGUAGE_CODE }}'
+            $("select").select2({ language });
+        });
+    </script>
+    <script src="{% static 'js/vendor/select2/i18n/fr.js' %}"></script>
   <script>
   
   function init_select(){}
