--- a/templates/subprojects/partial_update_form.html
+++ b/templates/subprojects/partial_update_form.html
@@ -2,6 +2,7 @@
 <form method="post" hx-post="{% url 'subprojects:subproject_update' object.pk %}">
     {% csrf_token %}
     {% bootstrap_form form %}
+    {% bootstrap_form custom_form %}
     <div class="text-right mt-3">
         <button type="submit" class="btn btn-primary">{% translate 'Save' %}</button>
     </div>
