init register menu mobile view

--- a/templates/subprojects/mobile/register_menu.html
+++ b/templates/subprojects/mobile/register_menu.html
@@ -22,7 +22,7 @@
         
         .custom-button {
             margin-top: 15px;
-            min-height: 350px;
+            min-height: 200px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -32,17 +32,18 @@
 
         .button-content {
             display: flex;
-            flex-direction: column;
             align-items: center;
             color: white;
         }
 
         .custom-button i {
-            font-size: 8em; /* Adjust as needed */
+            font-size: 8em; 
+            margin-right: 10px;
+            margin-left: 10px;
         }
         
         .button-content span {
-            font-size: 2.25em; /* Adjust text size as needed */
+            font-size: 2em; /* Adjust text size as needed */
         }
     </style>
 </head>
@@ -56,25 +57,15 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
-                        <p class="text-center">{% translate 'Collection Tool' %}</p>
+                        <p class="text-center">{% translate 'Register' %}</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-12">
                         <a class="btn btn-block btn-warning custom-button">
                             <div class="button-content">
-                                <i class="fas fa-file-contract"></i>
-                                <span>{% translate 'Registration' %}</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <a class="btn btn-block btn-danger custom-button">
-                            <div class="button-content">
-                                <i class="fas fa-file-alt"></i>
-                                <span>{% translate 'Activity Tracking' %}</span>
+                                <i class="fas fa-briefcase"></i>
+                                <span>{% translate 'Register project provider' %}</span>
                             </div>
                         </a>
                     </div>
