--- a/templates/layout/sidebar.html
+++ b/templates/layout/sidebar.html
@@ -32,6 +32,27 @@
                         <p>{% translate "Subprojects map" %}</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href=""
+                       class="nav-link {% if url_name == 'subproject_dashboard' %}active{% endif %}">
+                        <i class="nav-icon fas fa-file-contract"></i>
+                        <p>{% translate 'Registration' %}</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href=""
+                       class="nav-link {% if url_name == 'subproject_dashboard' %}active{% endif %}">
+                        <i class="nav-icon fas fa-file-alt"></i>
+                        <p>{% translate "Submit activity" %}</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'authorization:field_angent_list' %}"
+                       class="nav-link {% if url_name == 'field_angent_list' %}active{% endif %}">
+                        <i class="nav-icon fas fa-user-ninja"></i>
+                        <p>{% translate "Field agents" %}</p>
+                    </a>
+                </li>
             </ul>
             {% endwith %}
         </nav>
