As a staff agent I want to register a contractor so that I can assign it to a subproject and As a field agent when I click on submit activity I want to see the list of available forms (custom fields objects) so that I can click on the one I need to fill

--- a/templates/layout/sidebar.html
+++ b/templates/layout/sidebar.html
@@ -53,6 +53,13 @@
                         <p>{% translate "Field agents" %}</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'subprojects:contractor_list' %}"
+                       class="nav-link {% if url_name == 'contractor_list' %}active{% endif %}">
+                        <i class="nav-icon fas fa-id-badge"></i>
+                        <p>{% translate "Contractors" %}</p>
+                    </a>
+                </li>
             </ul>
             {% endwith %}
         </nav>
