--- a/templates/subprojects/mobile/register_menu.html
+++ b/templates/subprojects/mobile/register_menu.html
@@ -65,7 +65,7 @@
                         <a class="btn btn-block btn-warning custom-button">
                             <div class="button-content">
                                 <i class="fas fa-briefcase"></i>
-                                <span>{% translate 'Register project provider' %}</span>
+                                <span>{% translate 'Create subproject' %}</span>
                             </div>
                         </a>
                     </div>
