As a field agent I want to register a subproject so that I can start tracking its progress

--- a/templates/subprojects/mobile/layout/mobile_base.html
+++ b/templates/subprojects/mobile/layout/mobile_base.html
@@ -12,6 +12,7 @@
 
         .content-wrapper {
             background: #30b0b0;
+            padding-bottom: 15px;
         }
 
         p.text-center {
@@ -68,6 +69,8 @@
 
 {% include 'layout/foot.html' %}
 <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+{% block extrajs %}
+{% endblock extrajs %}
 </body>
 
 </html>
