As the backend I want to restrict form responses to only one per form per subproject.

--- a/templates/subprojects/mobile/index.html
+++ b/templates/subprojects/mobile/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12">
-                        <a href="{% url 'subprojects:mobile:submit-activity' %}" class="btn btn-block btn-danger custom-button">
+                        <a href="{% url 'subprojects:mobile:select-subproject-for-activity' %}" class="btn btn-block btn-danger custom-button">
                             <div class="button-content">
                                 <i class="fas fa-file-alt"></i>
                                 <span>{% translate 'Submit Activity' %}</span>
