--- a/templates/subprojects/mobile/select_subproject_for_activity.html
+++ b/templates/subprojects/mobile/select_subproject_for_activity.html
@@ -12,15 +12,15 @@
             <div class="form-group">
                 <label for="subproject-input">{% translate 'Select administrative unit' %}</label>
                 <select name="subproject" id="subproject-input" class="form-control">
-                    {% for subproject in subprojects %}
-                        <option value="{{ subproject.id }}">{{ subproject.name }}</option>
+                    {% for administrative_unit in administrative_units %}
+                        <option value="{{ administrative_unit.id }}">{{ administrative_unit.name }}</option>
                     {% endfor %}
                 </select>
             </div>
         </div>
     </div>
     <div id="id-btn-wrapper"></div>
-    
+
     <template id="btn-template">
         <div class="row">
             <div class="col-12">
@@ -37,38 +37,37 @@
 
 {% block extrajs %}
     <script type="text/javascript">
-    
+
         function fill_btn_wrapper(subproject_id){
-            
+
             let url = "{% url 'subprojects:api:custom-fields' %}?administrative-unit=" + subproject_id;
             let wrapper = $('#id-btn-wrapper');
             wrapper.html('');
-        
+
             $.ajax({
                 url: url,
                 success: function(data) {
                     data.forEach(function (activity) {
-                        const rendered_button = render_activity_button(activity);
+                        const rendered_button = render_subproject_button(activity);
                         wrapper.append(rendered_button);
                     });
                 }
             });
         }
-        
-        function render_activity_button(activity) {
+
+        function render_subproject_button(subproject) {
             let post_template = $($('#btn-template')[0].content).clone();
-            let href = "{% url 'subprojects:mobile:custom-form-update' '1' '0' %}"
-            href = href.replace('1', activity.id)
-            href = href.replace('0', activity.subprojects__id)
-        
+            let href = "{% url 'subprojects:mobile:select-subproject-custom-fields' '1' %}"
+            href = href.replace('1', subproject.id)
+
             post_template.find('.btn-link').attr('href', href);
             post_template.find('.btn-label').text(
-                activity.name + ' - ' + activity.subprojects__name + ' (' + activity.subprojects__administrative_level__name + ')'
+                subproject.name
             );
-        
+
             return post_template;
         }
-    
+
         $( document ).ready( function () {
             let subproject_input = $( '#subproject-input' );
             fill_btn_wrapper(subproject_input.val());
